--- a/connectiondialog.ui
+++ b/connectiondialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>277</width>
-    <height>335</height>
+    <height>391</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>260</y>
+     <y>320</y>
      <width>231</width>
      <height>27</height>
     </rect>
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>30</y>
+     <y>90</y>
      <width>231</width>
      <height>31</height>
     </rect>
@@ -40,7 +40,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>90</y>
+     <y>150</y>
      <width>231</width>
      <height>31</height>
     </rect>
@@ -50,7 +50,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>150</y>
+     <y>210</y>
      <width>231</width>
      <height>31</height>
     </rect>
@@ -60,7 +60,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>210</y>
+     <y>270</y>
      <width>231</width>
      <height>31</height>
     </rect>
@@ -70,7 +70,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>330</y>
+     <y>390</y>
      <width>231</width>
      <height>101</height>
     </rect>
@@ -83,7 +83,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>290</y>
+     <y>350</y>
      <width>231</width>
      <height>27</height>
     </rect>
@@ -96,7 +96,7 @@
    <property name="geometry">
     <rect>
      <x>21</x>
-     <y>10</y>
+     <y>70</y>
      <width>101</width>
      <height>17</height>
     </rect>
@@ -109,7 +109,7 @@
    <property name="geometry">
     <rect>
      <x>21</x>
-     <y>70</y>
+     <y>130</y>
      <width>121</width>
      <height>17</height>
     </rect>
@@ -122,7 +122,7 @@
    <property name="geometry">
     <rect>
      <x>21</x>
-     <y>130</y>
+     <y>190</y>
      <width>81</width>
      <height>17</height>
     </rect>
@@ -135,13 +135,36 @@
    <property name="geometry">
     <rect>
      <x>21</x>
-     <y>190</y>
+     <y>250</y>
      <width>81</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
     <string>Password:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_hostAddress_2">
+   <property name="geometry">
+    <rect>
+     <x>21</x>
+     <y>10</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>SQL Driver</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBox_sqlDrivers">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>30</y>
+     <width>231</width>
+     <height>31</height>
+    </rect>
    </property>
   </widget>
  </widget>
